--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -3,24 +3,24 @@
         <div style="padding: 20px 15px;">
             <header class="heading content" style="color:#fff">
                 <a href="javascript:window.location.href=window.location.href" style="color: #eee; font-size: 7px; float: left; margin-left: -40px; margin-top: -12px;">random image</a>
-                <button ng-if="nav.location_path == nav.user.key" ui-sref="welcome({location: nav.location, location_path: nav.location.key, go: 'welcome.roles'})" class="btn btn-warning pull-right" style="margin-left:-100px;">Edit Profile</button>
-                <img class="img-circle m-b" style="max-height:100px; max-width: 100px;" ng-src="{{profile.user.profile.avatar || profile.user.profile.linkedin.pictureUrl || '/public/images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}" onerror="this.src='/public/images/blank_avatar.png'">
+                <button ng-if="::nav.location_path == nav.user.key" ui-sref="welcome({location: nav.location, location_path: nav.location.key, go: 'welcome.roles'})" class="btn btn-warning pull-right" style="margin-left:-100px;">Edit Profile</button>
+                <img class="img-circle m-b" style="max-height:100px; max-width: 100px;" ng-src="{{::profile.user.profile.avatar || profile.user.profile.linkedin.pictureUrl || '/public/images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}" onerror="this.src='/public/images/blank_avatar.png'">
                 <div style="margin-top: -12px;">
-                    <span ng-repeat="(item, val) in profile.user.roles" class="user-role" style="font-size: 24px;"><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" ng-class="{'pe-7s-paper-plane' : item == 'founder', 'pe-7s-flag' : item == 'leader', 'pe-7s-study' : item == 'mentor', 'pe-7s-gleam' : item == 'investor', 'pe-7s-ball' : item == 'team', 'pe-7s-portfolio' : item == 'provider'}"></i></span>
+                    <span ng-repeat="(item, val) in ::profile.user.roles" class="user-role" style="font-size: 24px;"><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" ng-class="{'pe-7s-paper-plane' : item == 'founder', 'pe-7s-flag' : item == 'leader', 'pe-7s-study' : item == 'mentor', 'pe-7s-gleam' : item == 'investor', 'pe-7s-ball' : item == 'team', 'pe-7s-portfolio' : item == 'provider'}"></i></span>
                 </div>
                 <div style="margin:-15px 0;">
-                    <span ng-if="profile.user.profile.parents[0]" class="btn btn-default btn-xs">
-                        <a ui-sref="community.dashboard({location_path: profile.user.profile.home, community_path: profile.user.profile.parents[0], community: profile.communities[profile.user.profile.parents[0]], query: &quot;&#42;&quot;})">{{::profile.user.profile.parents[0][0].toUpperCase() + profile.user.profile.parents[0].slice(1);}}</a>
-                    </span>
-                    <span ng-if="profile.user.profile.home" class="btn btn-success btn-xs">
-                        <a ui-sref="community.dashboard({location_path: profile.user.profile.home, community: profile.communities[profile.user.profile.home], query: &quot;&#42;&quot;})"  style="color: #fff;">{{::profile.communities[profile.user.profile.home].profile.name}}</a>
-                    </span>
-                    <span ng-repeat="(key, val) in profile.user.roles.founder">
-                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
-                    </span>
-                    <span ng-repeat="(key, val) in profile.user.roles.leader" ng-if="key !== profile.user.profile.home && key !== profile.user.profile.parents[0]">
-                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
-                    </span>
+                    <button ng-if="::profile.user.profile.parents[0]" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.profile.home, community_path: profile.user.profile.parents[0], community: profile.communities[profile.user.profile.parents[0]], query: &quot;&#42;&quot;})">
+                        {{::profile.user.profile.parents[0][0].toUpperCase() + profile.user.profile.parents[0].slice(1);}}
+                    </button>
+                    <button ng-if="::profile.user.profile.home" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-success btn-xs" ui-sref="community.dashboard({location_path: profile.user.profile.home, community: profile.communities[profile.user.profile.home], query: &quot;&#42;&quot;})" style="color: #fff;">
+                        {{::profile.communities[profile.user.profile.home].profile.name}}
+                    </button>
+                    <button ng-repeat="(key, val) in ::profile.user.roles.founder" ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-xs" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}">
+                        <i class="fa {{::profile.communities[key].profile.icon}}"></i> {{::profile.communities[key].profile.name}}
+                    </button>
+                    <button ng-repeat="(key, val) in ::profile.user.roles.leader" ng-if="key !== profile.user.profile.home && key !== profile.user.profile.parents[0]" ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-xs" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}">
+                        <i class="fa {{::profile.communities[key].profile.icon}}"></i> {{::profile.communities[key].profile.name}}
+                    </button>
                 </div>
                 <h1 style="overflow:hidden; line-height: 1.25;">
                     {{::profile.user.profile.headline}}
@@ -30,12 +30,12 @@
                     words:1}}</span>, <span ng-bind-html="(profile.user.profile.summary) | sentence | linky:'_blank'"></span>
                 </h3>
                 <a ng-click="profile.ask()" class="btn btn-success btn-sm">Ask me a question</a>
-                <a ng-click="profile.contact(nav.location.key)" title="Contact {{item.value.profile.name}}" class="btn btn-sm btn-info" style="margin-left: 5px;">Contact me
+                <a ng-click="profile.contact(nav.location.key)" title="Contact {{::item.value.profile.name}}" class="btn btn-sm btn-info" style="margin-left: 5px;">Contact me
                 </a>
                 <div style="padding-top:10px; overflow: hidden; height: 50px; margin-bottom: -10px;">
-                    <li ng-repeat="skill in ::profile.user.profile.skills" style="margin-right: 5px;" class="btn btn-outline btn-default btn-xs" ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: skill})">
+                    <buttn ng-repeat="skill in ::profile.user.profile.skills" style="margin-right: 5px;" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-outline btn-default btn-xs" ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: skill})">
                         {{::skill}}
-                    </li>
+                    </buttn>
                 </div>
             </header>
         </div>
