--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -5,9 +5,10 @@
     </div>
     <div class="user-row list-hr">
         <span loading-bars ng-if="nav.loaders[item.value.profile.name]"></span>
-        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="nav.loaders[item.value.profile.name] = true" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
-        <a ng-show="(item.value.profile.summary).length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
-        </a>
+        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="nav.loaders[item.value.profile.name] = true" class="dash-row-div"><strong>{{::item.value.profile.name}} </strong></a>
+        <div class="dash-row-summary" style="margin-left: -5px;">
+            <a ng-show="(item.value.profile.summary).length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
+        </div>
         <span ng-if="!item.value.resource">
             <li class="role-right">
                 <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.value.profile.parents[0][0].toUpperCase() + item.value.profile.parents[0].slice(1);}}</button>
