--- a/app/components/users/user.list.item.html
+++ b/app/components/users/user.list.item.html
@@ -6,11 +6,11 @@
     </div>
     <div class="user-row list-hr">
         <a ng-show="(nav.community.resource || nav.location.resource) && nav.user.roles.leader[nav.community.key]" ng-click="nav.removeUser(item)" title="Remove {{::item.value.profile.name}} from {{::nav.community.profile.name}}" style="font-size: 11px; color:#bbb; padding-left:4px;">remove</a>
-        <span loading-bars ng-if="nav.loaders[item.value.profile.name]"></span>
         <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="nav.loaders[item.value.profile.name] = true" class="dash-row-div"><strong>{{::item.value.profile.name}} </strong></a>
-        <div class="dash-row-summary">
-            <a ng-show="item.value.profile.summary.length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
+        <div class="dash-row-summary" ng-show="item.value.profile.summary.length > 0">
+            <a title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
         </div>
+        <span loading-bars ng-if="nav.loaders[item.value.profile.name]"></span>
         <li ng-repeat="(item, val) in item.value.roles" class="user-role role-right" ><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></li>
         <br>
         <div class="dash-row">
