--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -2,7 +2,7 @@
     <div class="hpanel">
         <div class="panel-body" style="width: 100%;" ng-class="{'header-embedded' : nav.embedded, 'no-sides' : !nav.embedded}">
             <div class="pull-left" tour-step order="1" title="People and Companies" content="To view people by role or industry, or sort companies by investment, visit the People and Company pages." placement="bottom">
-                <ul ng-if="nav.community.type !== 'user' && nav.community.type !== 'company'" class="header-nav">
+                <ul ng-if="global.community.type !== 'user' && global.community.type !== 'company'" class="header-nav">
                     <li ui-sref="{{'community.dashboard' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'community.dashboard' }">
                         <a>OVERVIEW</a>
                     </li>
@@ -12,18 +12,18 @@
                     <li ui-sref="{{'company.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'company.list' }">
                         <a>COMPANIES</a>
                     </li>
-                    <li ui-sref="{{'resource.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'resource.list' }" ng-if="!nav.community.resource">
+                    <li ui-sref="{{'resource.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'resource.list' }" ng-if="!global.community.resource">
                         <a>RESOURCES</a>
                     </li>
                 </ul>
 
-                <ul ng-if="nav.community.type == 'user' || nav.community.type == 'company'" class="header-nav" style="margin-left:-40px;" >
-                    <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)">
-                        <a ui-sref="community.dashboard({location_path: nav.location.key, community: nav.location})">
-                            &nbsp;&nbsp;{{ nav.location.profile.name.toUpperCase() }}&nbsp;&nbsp;</a>/
+                <ul ng-if="global.community.type == 'user' || global.community.type == 'company'" class="header-nav" style="margin-left:-40px;" >
+                    <li ng-if="global.location_path && (global.location.key !== global.community.key)">
+                        <a ui-sref="community.dashboard({location_path: global.location.key, community: global.location})">
+                            &nbsp;&nbsp;{{ global.location.profile.name.toUpperCase() }}&nbsp;&nbsp;</a>/
                     </li>
-                    <li ng-if="nav.community.type == 'user' || nav.community.type == 'company'" style="margin-left:-17px;">
-                        <a ui-sref="community.dashboard({location_path: nav.community.key, community: nav.community})" style="color:#bbb;">&nbsp;&nbsp;{{ nav.community.profile.name.toUpperCase() }}</a>
+                    <li ng-if="global.community.type == 'user' || global.community.type == 'company'" style="margin-left:-17px;">
+                        <a ui-sref="community.dashboard({location_path: global.community.key, community: global.community})" style="color:#bbb;">&nbsp;&nbsp;{{ global.community.profile.name.toUpperCase() }}</a>
                     </li>
                 </ul>
             </div>
@@ -32,11 +32,11 @@
                 <div ng-if="!nav.user && (nav.state.current.name == 'company.list')" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-success" ng-click="nav.requestInvitation()" style="font-size: 12px; color: #fff;">Add Company</button>
                 </div>
-                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.resource && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
+                <div ng-if="nav.user && (global.community.type == 'cluster' || (global.community.resource && nav.user.roles.leader[global.community.key]) || (global.community.type == 'location' && nav.user.communities.indexOf(global.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-success" ui-sref="company.add" style="font-size: 12px; color: #fff;">Add Company</button>
                 </div>
 
-                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.resource && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
+                <div ng-if="nav.user && (global.community.type == 'cluster' || (global.community.resource && nav.user.roles.leader[global.community.key]) || (global.community.type == 'location' && nav.user.communities.indexOf(global.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-info" ng-click="nav.invitePeople()" style="font-size: 12px; color: #fff;">Invite People</button>
                 </div>
             </div>
