--- a/app/components/companies/company.dashboard.profile.html
+++ b/app/components/companies/company.dashboard.profile.html
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
         <div style="padding-bottom: 20px;">
             <div>
-                <div class="pull-right">
+                <div ng-if="::profile.company.profile.angellist.angellist_url" class="pull-right">
                     <a href="{{::profile.company.profile.angellist.angellist_url}}" target="_blank"><i class="fa fa-angellist btn btn-default btn-xs"></i>
                     </a>
                 </div>
@@ -23,7 +23,7 @@
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Founders:</p>
             <li ng-repeat="key in profile.team.founder" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: $rootScope.global.community, community: key.value })">{{key.value.profile.name}} </a>
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: global.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
@@ -31,7 +31,7 @@
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Investors:</p>
             <li ng-repeat="key in profile.team.investor" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: $rootScope.global.community, community: key.value })">{{key.value.profile.name}} </a>
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: global.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
@@ -39,7 +39,7 @@
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Team Members:</p>
             <li ng-repeat="key in profile.team.team" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: $rootScope.global.community, community: key.value })">{{key.value.profile.name}} </a>
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: global.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
@@ -47,7 +47,7 @@
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Mentors:</p>
             <li ng-repeat="key in profile.team.mentor" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: $rootScope.global.community, community: key.value })">{{key.value.profile.name}} </a>
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: global.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
@@ -55,7 +55,7 @@
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Service Providers:</p>
             <li ng-repeat="key in profile.team.provider" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: $rootScope.global.community, community: key.value })">{{key.value.profile.name}} </a>
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: global.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
@@ -74,5 +74,5 @@
     <p style="white-space:pre-wrap;" ng-bind-html="::profile.company.profile.summary | linky:'_blank'"></p>
     <hr>
     <h3 ng-show="profile.company.profile.industries">Markets</h3>
-    <li ng-repeat="industry in profile.company.profile.industries" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: $rootScope.global.location.key, community: $rootScope.global.location, query: industry})">{{::industry}}</a></li>
+    <li ng-repeat="industry in profile.company.profile.industries" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: global.location.key, community: global.location, query: industry})">{{::industry}}</a></li>
 </div>
