--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -4,7 +4,7 @@
 
         <div ng-if="!add.update">
             <div class="col-xs-12">
-                <h4 class="modal-title">Add a {{ add.is_resource ? 'resource' : 'company' }} to {{add.location.profile.name.split(',').slice(0, (add.location.profile.name.split(',').length - 1) || 1).join()}}</h4>
+                <h4 class="modal-title">Add a {{ add.is_resource ? 'resource' : 'company' }} to {{global.location.profile.name.split(',').slice(0, (global.location.profile.name.split(',').length - 1) || 1).join()}}</h4>
                 <p class="font-bold">{{ add.is_resource ?
                     'Resources include coworking spaces, accelerators, investment funds, networking events, and other organizations that support entrepreneurship.' :
                     'Only add companies that are part of your local startup community.' }} </p>
@@ -161,7 +161,7 @@
                                     Customize the url path:
 
                                 </h4>
-                                <input type="text" class="form-control input-lg" placeholder="{{ add.selectCompany.url }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;" ng-disabled="add.update">
+                                <input type="text" class="form-control input-lg" placeholder="{{ add.selectedCompany.url }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;" ng-disabled="add.update">
                                 <em style="font-size: 11px;" class="pull-right">The path will be: startupcommunity.org/<strong><span style="text-transform: lowercase;">{{ add.selectedCompany.url }}</span></strong></em>
                             </div>
                             <div class="col-lg-12" style="margin-top:-10px;">
@@ -189,7 +189,7 @@
 
             <div alert-box this-alert="add.alert" style="margin-top: -20px; margin-bottom: 20px;"></div>
 
-            <button ladda="add.del_working" class="ladda-button btn btn-danger pull-left" data-style="zoom-in" data-spinner-size="25" ng-click="add.deleteCompany(add.community.key)" ng-show="add.update && !add.alert">Delete {{::add.community.profile.name || (add.is_resource ? 'Resource' : 'Company') }}</button>
+            <button ladda="add.del_working" class="ladda-button btn btn-danger pull-left" data-style="zoom-in" data-spinner-size="25" ng-click="add.deleteCompany(global.community.key)" ng-show="add.update && !add.alert">Delete {{::global.community.profile.name || (add.is_resource ? 'Resource' : 'Company') }}</button>
 
             <div class="text-right m-t-xs">
                 <button ng-click="add.step = 1" ng-disabled="add.step == 1" class="btn btn-default">Previous</button>
