--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1104,16 +1104,19 @@ a:hover, a:focus {
     padding: 3px 0 0 0;
     font-size: 20px;
     font-weight: 200;
+    line-height: 2;
   }
   &:-ms-input-placeholder {
     padding: 3px 0 0 0;
     font-size: 20px;
     font-weight: 200;
+    line-height: 2;
   }
   &::-webkit-input-placeholder {
     padding: 3px 0 0 0;
     font-size: 20px;
     font-weight: 200;
+    line-height: 2;
   }
 }
 
